Happy Paw/css/about-booking.css
@import "main.css";

/* google icons */
.material-symbols-rounded {
  font-variation-settings:
  'FILL' 0,
  'wght' 400,
  'GRAD' 0,
  'opsz' 24
}
h1 > .material-symbols-rounded {
    font-size: 2rem;
}

/* Responsive design for mobile screens */
@media (max-width: 930px) {
    header {
        flex-direction: column;
        text-align: center;
        padding: 1.5em;
    }

    .nav-bar {
        flex-direction: row;
        margin-top: 1em;
        gap: 5px;
    }

    main {
        text-align: left;
        width: 90%;
    }
    
    .main-section, .main-section-col {
        /* margin: 0 !important;
        gap: 1rem !important;
        padding: 0.5rem;
        height: 100% !important;
        max-width: 100vw !important; */
        width: 100% !important;
        flex-direction: column;
        margin: 0;
        padding: 0;
        box-sizing: border-box;
    }

    #contact {
        padding: 0.5rem !important;
        border-left: none !important;
        width: 100% !important;
        max-width: 100vw !important;
    }

     .booking-form, .form-row{
        display: flex;
        flex-direction: column;
        width: 100%;
    }

    .consent-flex {
        flex-direction: column;
    }

    footer {
        font-size: 0.7rem;
        padding: 0.5rem;
    }

}

/* ======== ALL, BODY, HTML =========*/
/* all elements */
* {
    margin: 0;
    padding: 0;
}

/* width of entire page + overflow */
html, body {
    width: 100vw;
    overflow-x: hidden;
}
body {
    background-color: var(--bg_colour);             /* main background colour */
    font-family: 'Times', sans-serif;               /* main font (p)*/
    width: 100%;
}

/* flex box container - all content */
.container {
    width: 100%;
    height: 100vh;
    margin: 0;
    display: flex;
    flex-direction: column;
    justify-content: space-between;             /* space between elements in container*/
}

/* ======== IMAGES =========*/
img {
    width: 100%;
    border-radius: 12px;    /* round corners */
    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15); /* soft shadow for depth */
}

/* centered image section/container */
.center-image {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 2rem auto;
}

/* image contained in center-image section */
.center-image img {
  max-width: 50%;        /* scales nicely on all devices */
  height: auto;
  border-radius: 12px;    /* rounded corners*/
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15); /* soft shadow for depth */
}

/* ======== LINKS =========*/
/* change link hover/click to white */
a, a:hover, a:active {
    color: var(--white);
}

/* link in button on hover */                       /* not sure if this is used yet */
/* button > a:hover {
    border-bottom: solid 2px var(--white);
    transition: ease-in-out 100ms; 
} */

/* ======== BUTTON DEFAULTS =========*/
/* remove default button styling */
button {
    background-color: var(--transparent);
    border: none;
    box-shadow: none;
}

/* button with span/icon font colours */
button > span {
    color: var(--title);
}


/* ======== LISTS DEFAULTS =========*/
/* remove default list styles */
li {
    list-style: none;
    line-height: 1.8rem;
    color: var(--p);
}

/* list font size in section */
section > ul {
    font-size: 0.8rem;
}

/* ======== TEXT ELEMENTS =========*/
/* set font for h elements */
h1, h2, h3 {
    font-family: 'Satoshi', sans-serif;
    font-weight: 700;
}

/* set colour for h1 */
h1 {
    color: var(--title);
}

/* set colour for h2 and h3 */
h2, h3 {
    color: var(--secondary_colour);
}

/* paragraph defaults */
p {
    color: var(--p);
    line-height: 2em;
    overflow-wrap: break-word;
    text-align: justify;
}

/* main section h2 */
main > section > h2 { 
    text-align: left;
}

.center-text {
    text-align: center;
}

/* ======== HEADER  =========*/
/* header */
header {
    margin-top: 15px;
    background: var(--banner);                  /* banner bg colour */
    border-radius: 0;                           /* rounded corners */
    padding: 2.5rem;
    display: flex;
    align-items: center;                        /* centres items in header*/
    justify-content: space-between;             /* space between h1 and nav-bar in header*/
}

/* ======== NAVIGATION BAR within header =========*/
/* nav bar wrapper display in row */
.nav-bar-row {
    display: flex;
    margin-top: 2rem;
    background-color: var(--transparent);
    display: flex;                              /* items displayed using flex */
    justify-content: space-between;
    text-align: center;
    gap: 0.3rem;
}

/* contains the icon and corresponding text (flex-col) */
.nav-btn {
    display: flex;
    gap: 0.3rem;
    flex-direction: column;
    align-items: center;
    /*  min-height: 50px; Set this to fit icon plus text */
    justify-content: center;
}

/* labels beneath icons */
.nav-icon-label {
    font-family: 'Satoshi', sans-serif;
    color: var(--white);
    font-size: 1.6rem;                         /* <------------ Change back size of label text, was 0.8rem. Alex */
    transition: opacity 0.2s;
    height: 1em;        /* Always reserve space */
    opacity: 0;
    pointer-events: none;
    min-width: 50px;
}

/* toggle for active  */
.nav-btn.active .nav-icon-label {
  opacity: 1;
  pointer-events: auto;
}

/* all span elements i.e. icons, in nav-bar class */
.nav-bar > span {
    padding: 10px;
    position: center;

}

/* all buttons in nav bar */
.nav-bar > button {
    color: var(--p);
    background-color: var(--transparent);
    padding: 10px;
    width: 40px;
    height: 40px;
    position: center;
    
}

/* add bottom line on hover of nav icons */
.nav-bar > button > a:hover {
    border-bottom: solid 2px var(--white);
    transition: ease-in-out 100ms; 
}

/* size of material icons in nav buttons */      /* <------------ Made the icons bigger. Remove or comment the whole blow to revert Alex */
.nav-btn .material-symbols-rounded {
  font-size: 50px; /* change to whatever size you like */
  line-height: 1;  /* keeps it vertically centered */
}

/* ======== FOOTER =========*/
 /* footer */
footer {
    bottom: 0;
    padding: 1rem;
    text-align: center;                         /* centre footer text */
    font-size: 0.8rem;
    color: var(--faint);
}

/* ======== MAIN/CENTRE PAGE CONTENT =========*/
/* main section containing children */
.main-section, .main-section-col {
    margin: 15px auto; 
    width: 100%;                            /* horizontally center in page*/
    max-width: 900px;                           /* max width of main section */
    display: flex; 
    align-items: center;
    background: #fff;
    padding: 2rem;
    gap: 2rem;                                  /* gap between children */
    border-radius: 12px;                        /* rounded corners */
    box-shadow: 0 0 12px var(--shadow);         /* subtle shadow */
}

/* flex direction column */
.main-section-col {
    flex-direction: column;
}

/* main section child */
.section-item {
    /* background: #06c; */
    padding: 0.5rem;
    line-height: 2rem;
    max-width: 180px;
}

/* main text in main-section (about) */
.main {
    max-width: 600px;                           /* max width of the main class */
    width: 100%;
}

/* contact section in about.html*/
#contact {
    width: 30%;
    padding: 0 0 0 2rem;    
    border-left: solid 1px var(--secondary_colour);
}

/* ========= FORM (booking) ========= */
/* all form heights */
form {
    height: 50%;
}

/* reset label on forms */
label {
    font-family: 'Satoshi', sans-serif;
    font-weight: 800;
    color: var(--secondary_colour);
    margin-bottom: 8px;
}

/* reset default input boxes */
input {
    background-color: var(--transparent);
    color: var(--p);
    font-family: 'Satoshi', sans-serif;
}

/*  selection input defaults */
select {
    width: 100%;
    background-color: var(--transparent);
    color: var(--faint);
    font-family: 'Satoshi', sans-serif;
}

/* user input text area */
textarea {
    resize: none;
}

/* =========                      Appointment form  ========= */
/* booking form */
.booking-form {         /*need to add to media query */
    padding: 30px;
    width: 100%;
    max-width: 600px;
    border-bottom: solid 1px var(--secondary_colour);
    height: fit-content;
}
/* label to input, flex columns                        */
.label-input-col {
    display: flex;
    flex-direction: column;
    width: 100%;
    justify-content: center;
}
/* form rows                             */
.form-row {
    width: 100%;
    display: flex;
    justify-content: space-evenly;
    gap: 3rem;
}

/*  input boxes in booking form */
.input-box {
    padding: 10px;
    border: 1px solid var(--secondary_colour);
    border-radius: 0.5rem;
    outline: none;
    margin-bottom: 15px;
}

/* placeholder text for booking form */
.input-box::placeholder{
    font-family: 'Satoshi', sans-serif;
    color: var(--faint);
}

/* date - time - service selection row in booking form */
.date-time-service {
    gap: 1rem;
    text-align: left;
}

/* span consent line text format */
.consent > span {
    float: left;
    margin-right: 10px;
    font-size: 0.8rem;
    font-weight: 300;
    color: var(--secondary_colour);
    align-self: center;
}

/* distance of checkbox from span text */
.consent > span > input {
    margin-left: 1rem;
}

/* consent grid/flex/box                 NEED TO ALTER THIS ========= */
.consent-flex {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: calc(100%-10px);
    padding: 20px 0;
    border-radius: 0.5rem;
    gap: 1rem;
    margin-bottom: 20px;
    text-align: left;
}

/* submit button at end of form */
.submit-btn {
    float: right;
    margin-top: 0;
    width: 5rem;
    padding: 8px;
    border-radius: 0.5rem;
    color: var(--white);
    background: rgb(188, 108, 96);
    box-shadow: 1px 1px 8px var(--shadow);
    transition: ease-in-out 100ms;                      /* transition to ease hover:active effects */
}

/* submit button hover effect */
.submit-btn:hover{
    background: var(--p);                              /* change button bg colour on hover*/
}

/* submit button active effect */
.submit-btn:active {
   color: var(--secondary_colour);                     /* change font colour when button is active*/
}

/* Toast styling - Alex v1.0 */
  .toast {
    visibility: hidden;
    min-width: 250px;
    background-color: #333;
    color: #fff;
    text-align: center;
    border-radius: 10px;
    padding: 14px;
    position: fixed;
    z-index: 1000;
    left: 50%;
    bottom: 40px;
    transform: translateX(-50%);
    font-size: 16px;
    opacity: 0;
    transition: opacity 0.4s ease, bottom 0.4s ease;
  }

  .toast.show {
    visibility: visible;
    opacity: 1;
    bottom: 60px;
  }

/* =========                      Appointment Form END  ========= */

